--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,64 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'org.owasp:dependency-check-gradle:6.5.0.1'
+    }
+}
+
+plugins {
+    id 'jacoco'
+    id "org.sonarqube" version "3.3"
+}
+
+apply plugin: 'org.owasp.dependencycheck'
 apply plugin: 'java-library'
+
+repositories {
+    mavenCentral()
+}
 
 dependencies {
     implementation 'joda-time:joda-time:2.10.13'
     testImplementation 'junit:junit:4.13.2'
 }
 
-repositories {
-    mavenCentral()
+ext {
+
 }
+
+sonarqube {
+    properties {
+        property "sonar.sourceEncoding", "UTF-8"
+        property "sonar.projectKey", "sonarqube-pr-dep"
+        property "sonar.projectName", "sonarqube-pr-dep"
+        property "sonar.scm.provider", "git"
+        property 'sonar.dependencyCheck.reportPath', 'build/reports/dependency-check-report.xml'
+        property 'sonar.dependencyCheck.xmlReportPath', 'build/reports/dependency-check-report.xml'
+        property 'sonar.dependencyCheck.htmlReportPath', 'build/reports/dependency-check-report.html'
+        property 'sonar.qualitygate.wait', 'true'
+        property 'sonar.coverage.jacoco.xmlReportPaths', '${project.buildDir}/reports/jacoco.xml'
+        properties['sonar.sources'] += "build.gradle"
+        property 'sonar.login', "${sonarconfig-login}"
+    }
+}
+
+dependencyCheck {
+    failBuildOnCVSS = 11
+    dependencyCheck {
+        format = 'ALL'
+    }
+    analyzers {
+        nodeAudit {
+            skipDevDependencies = true
+        }
+        nodeEnabled = false
+        retirejs {
+            enabled = false
+        }
+        assemblyEnabled = false
+    }
+    failOnError = true
+}
+
