--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,2 @@
-systemProp.sonar.host.url=${sonarconfig-address}
+# systemProp.sonar.host.url= set up Sonar 8.9.2 instance
+org.gradle.jvmargs=-XX:MaxMetaspaceSize=512m
