--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,11 @@ repositories {
 }
 
 dependencies {
+    implementation 'ch.qos.logback:logback-classic:1.2.10'
+    implementation 'ch.qos.logback:logback-core:1.2.10'
     implementation 'joda-time:joda-time:2.10.13'
+    implementation 'org.slf4j:slf4j-api:1.7.35'
+
     testImplementation 'junit:junit:4.13.2'
 }
 
