--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ dependencies {
     implementation 'joda-time:joda-time:2.10.13'
     implementation 'org.slf4j:slf4j-api:1.7.35'
 
+    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
+    implementation 'org.apache.logging.log4j:log4j-core:2.14.1'
+
     testImplementation 'junit:junit:4.13.2'
 }
 
