--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ sonarqube {
         property 'sonar.dependencyCheck.reportPath', 'build/reports/dependency-check-report.xml'
         property 'sonar.dependencyCheck.xmlReportPath', 'build/reports/dependency-check-report.xml'
         property 'sonar.dependencyCheck.htmlReportPath', 'build/reports/dependency-check-report.html'
+        property 'sonar.dependencyCheck.jsonReportPath', 'build/reports/dependency-check-report.json'
         property 'sonar.qualitygate.wait', 'true'
         property 'sonar.coverage.jacoco.xmlReportPaths', '${project.buildDir}/reports/jacoco.xml'
         properties['sonar.sources'] += "build.gradle"
